loading the free odus from the server

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,7 +51,7 @@
     width: 100%;
     height: 100%;
     background: white;
-    background-image: url('../img/priest.jpeg');
+    background-image: url('../img/priest.png');
      background-position: center;
       background-repeat: no-repeat;
     display: flex;
