--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,16 +81,16 @@ h1 {
 
 #birthdate-box {
         margin-bottom: 10px;
-    }
+    }  
 
-input[type="date"] {
+#birthdate {
     width: 80%;
     max-width: 250px;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 5px;
-}    
+}  
 
 button {
     font-size: 16px;
