--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,14 +83,15 @@ h1 {
         margin-bottom: 10px;
     }  
 
-#birthdate {
+input#birthdate[type="text"],
+input#birthdate[type="date"]  {
     width: 80%;
     max-width: 250px;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 5px;
-}  
+}     
 
 button {
     font-size: 16px;
